--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Basic
-title: 潘柏信
+title: 小聪哥
 subtitle: 个人站
-description: 欢迎来到我的个人站~
+description: 欢迎来到我的个人主站~
 # 头像里面的标题
-avatarTitle: leopardpan
+avatarTitle: YCKJ
 # 头像里面的描述
-avatarDesc: iOS / 机器学习
-url: "http://baixin.io"
+avatarDesc: Android / 机器学习
+url: "http://www.wencong.com"
 
 # Comment
 comment:
@@ -15,8 +15,8 @@ comment:
 
 # Social
 social:
-    weibo: 5366874726 
-    github: leopardpan
+    weibo: Believe2017666 
+    github: kabuqinuofu
     # twitter: 
     mail: leopardpan@icloud.com
 
